--- a/style.css
+++ b/style.css
@@ -57,13 +57,6 @@ p {
     margin-left: 5px;
 }
 
-#listStorage {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-
 #delete_btn {
     height: 25px;
     width: 25px;
@@ -71,4 +64,10 @@ p {
     border: 1px solid grey;
     margin-left: 10px;
     color: #C70039;
+}
+
+#itemContainer {
+    display: grid;
+    justify-items: center;
+    grid-template-columns: 1fr 1fr;
 }
