Made the list items clickable so that they can have a strikethrough if ocmplete and added functionality so that the x button removes only that list item while the clear button removes all items from the list. Webiste is not complete functionally

--- a/style.css
+++ b/style.css
@@ -66,8 +66,12 @@ p {
     color: #C70039;
 }
 
-#itemContainer {
+.itemContents {
     display: grid;
     justify-items: center;
     grid-template-columns: 1fr 1fr;
+}
+
+.complete {
+    text-decoration: line-through;
 }
