--- a/style.css
+++ b/style.css
@@ -25,8 +25,8 @@ h1 span {
 
 .container {
     text-align: center;
-    margin-left: 200px;
-    margin-right: 200px;
+    margin: auto;
+    width: 65%;
     margin-top: 170px;
     background-color: rgba(0, 80, 0, 0.6);
     border: 1px solid black;
